Updates to README and notebook

--- a/code/BaseballDataBank.ipynb
+++ b/code/BaseballDataBank.ipynb
@@ -5658,7 +5658,7 @@
    "source": [
     "In order to visualize this dataset more fully, we can leverage the interactive plotting functionality supported by Bokeh, which we introduced earlier in our accompanying CVW roadmap in the context of Twitter data.\n",
     "\n",
-    "By rendering different parts of the augmented dataframe in various ways, we can produce a map that fleshes out the picture above, providing insights into the differences between pitchers and position players, and between HOF inductees and those not in the HOF.  Bokeh produces an html file with all this information embedded, and by panning, zooming, and hovering over data points to see additional statistics, one can explore this map of hitting in baseball."
+    "By rendering different parts of the augmented dataframe in various ways, we can produce a map that fleshes out the picture above, providing insights into the differences between pitchers and position players, and between HOF inductees and those not in the HOF.  Bokeh produces an html file with all this information embedded, and by panning, zooming, and hovering over data points to see additional statistics, one can explore this map of hitting in baseball.  A previously rendered version of this interactive html file, along with some associated commentary, is available for inspection in our accompanying<a href=\"https://cvw.cac.cornell.edu/python-data-science/machine-learning/batting_TSNE.html\">Map of Hitting in Baseball</a>."
    ]
   },
   {
